grammar.js
        program: $ => seq(
            optional(
                $.shebang
            ),
            repeat(
                $._item
            )
        ),

        shebang: _ => rx.shebang,

        _item: $ => choice(
            $.comment,
            $._form,
        ),

        comment: _ => rx.comment,

        _form: $ => choice(
            $.reader_macro,
            $._identifier,
            $._string_literal,
            $.list,
            $.set,
            $.dictionary,
            $.expression,
            $.quoted_expression
        ),

        reader_macro: $ => choice(
            $.discard
        ),

        discard: $ => seq(
            $.discard_prefix,
            /\s+/,
            field("discarded_form", $._form)
        ),

        discard_prefix: $ => lt.discard_prefix,

        integer: $ => choice(
            $.binary,
            $.hexadecimal,
            $.octal,
            $.decimal
        ),

        decimal: _ => token(
            seq(
                optional(
                    number.sign,
                ),
                number.decimal_digit,
                repeat(
                    choice(
                        number.separator,
                        number.decimal_digit
                    )
                )
            )
        ),

        binary: _ => token(
            seq(
                optional(
                    number.sign
                ),
                number.binary_radix,
                number.binary_digit,
                repeat(
                    choice(
                        number.separator,
                        number.binary_digit
                    )
                )
            )
        ),

        hexadecimal: _ => token(
            seq(
                optional(
                    number.sign
                ),
                number.hexadecimal_radix,
                number.hexadecimal_digit,
                repeat(
                    choice(
                        number.separator,
                        number.hexadecimal_digit
                    )
                )
            )
        ),

        octal: _ => token(
            seq(
                optional(
                    number.sign
                ),
                number.octal_radix,
                number.octal_digit,
                repeat(
                    choice(
                        number.separator,
                        number.hexadecimal_digit
                    )
                )
            )
        ),

        float: $ => choice(
            $.nan,
            $.infinity,
            $.numeric_float
        ),

        nan: _ => token(
            seq(
                optional(
                    number.sign
                ),
                number.nan
            )
        ),

        infinity: _ => token(
            seq(
                optional(
                    number.sign
                ),
                number.infinity
            )
        ),

        numeric_float: _ => token(
            seq(
                optional(
                    seq(
                        number.sign,
                        repeat(
                            number.separator
                        )
                    )
                ),
                choice(
                    seq(
                        optional(
                            seq(
                                number.decimal_digit,
                                repeat(
                                    choice(
                                        number.separator,
                                        number.decimal_digit
                                    )
                                )
                            ),
                        ),
                        '.',
                        repeat(
                            number.separator
                        ),
                        number.decimal_digit,
                        repeat(
                            choice(
                                number.separator,
                                number.decimal_digit
                            )
                        ),
                        optional(
                            seq(
                                /[eE]/,
                                optional(
                                    number.sign
                                ),
                                number.decimal_digit,
                                repeat(
                                    choice(
                                        number.separator,
                                        number.decimal_digit
                                    )
                                )
                            ),
                        )
                    ),
                    seq(
                        number.decimal_digit,
                        repeat(
                            choice(
                                number.separator,
                                number.decimal_digit
                            )
                        ),
                        '.',
                        repeat(
                            number.separator
                        ),
                        optional(
                            seq(
                                number.decimal_digit,
                                repeat(
                                    choice(
                                        number.separator,
                                        number.decimal_digit
                                    )
                                )
                            )
                        ),
                        optional(
                            seq(
                                /[eE]/,
                                optional(
                                    number.sign
                                ),
                                number.decimal_digit,
                                repeat(
                                    choice(
                                        number.separator,
                                        number.decimal_digit
                                    )
                                )
                            )
                        )
                    ),
                    seq(
                        number.decimal_digit,
                        repeat(
                            choice(
                                number.separator,
                                number.decimal_digit
                            )
                        ),
                        /[eE]/,
                        optional(
                            number.sign
                        ),
                        number.decimal_digit,
                        repeat(
                            choice(
                                number.separator,
                                number.decimal_digit
                            )
                        )
                    )
                )
            )
        ),

        complex: _ => token(
            seq(
                optional(
                    seq(
                        number.sign,
                        repeat(number.separator)
                    )
                ),
                optional(
                    seq(
                        number.decimal_digit,
                        repeat(
                            choice(
                                number.separator,
                                number.decimal_digit
                            )
                        ),
                        /[+-]/,
                        repeat(
                            number.separator
                        )
                    )
                ),
                number.decimal_digit,
                repeat(
                    choice(
                        number.separator,
                        number.decimal_digit
                    )
                ),
                /[jJ]/
            )
        ),

        keyword: _ => token(
            seq(
                ':',
                repeat(
                    identifier.valid_character
                )
            )
        ),

        dotted_identifier: _ => token(
            choice(
                seq(
                    repeat(
                        '.'
                    ),
                    repeat1(
                        identifier.valid_character
                    ),
                    '.',
                    repeat1(
                        identifier.valid_character
                    ),
                    repeat(
                        seq(
                            '.',
                            repeat1(
                                identifier.valid_character
                            )
                        )
                    )
                ),
                seq(
                    repeat1(
                        '.'
                    ),
                    repeat1(
                        identifier.valid_character
                    ),
                    optional(
                        repeat(
                            seq(
                                '.',
                                repeat1(
                                    identifier.valid_character
                                )
                            )
                        )
                    )
                )
            )
        ),

        ellipsis: _ => identifier.ellipsis,

        symbol: _ => token(
            choice(
                repeat1(
                    identifier.valid_character
                ),
                repeat1(
                    '.'
                )
            )
        ),

        string: _ => token(
            seq(
                '"',
                repeat(
                    rx.string
                ),
                '"'
            )
        ),

        fstring: $ => seq(
            'f"',
            repeat(
                choice(
                    rx.fstring,
                    seq(
                        '{',
                        $._form,
                        '}'
                    )
                )
            ),
            '"'
        ),

        bstring: _ => token(
            seq(
                'b"',
                repeat(
                    rx.string
                ),
                '"'
            )
        ),

        raw_string: _ => token(
            seq(
                'r"',
                repeat(
                    rx.string
                ),
                '"'
            )
        ),

        raw_fstring: $ => seq(
            /(rf)|(fr)"/,
            repeat(
                choice(
                    rx.fstring,
                    seq(
                        '{',
                        $._form,
                        '}'
                    )
                )
            ),
            '"'
        ),

        raw_bstring: _ => token(
            seq(
                /(rb)|(br)"/,
                repeat(
                    rx.string
                ),
                '"'
            )
        ),

        bracket_string: $ => seq(
            '#[',
            $.bracket_string_identifier,
            '[',
            optional(
                $.bracket_string_contents
            ),
            ']',
            $.bracket_string_ending_identifier,
            ']'
        ),

        bracket_fstring: $ => seq(
            '#[',
            $.bracket_fstring_identifier,
            '[',
            repeat(
                choice(
                    $.bracket_fstring_contents,
                    seq(
                        '{',
                        $._form,
                        '}'
                    )
                )
            ),
            ']',
            $.bracket_fstring_ending_identifier,
            ']'
        ),

        none: _ => none,

        expression: $ => seq(
            '(',
            repeat(
                $._form
            ),
            ')'
        ),
